--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,6 +30,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Python Syntax Checker
+      # You may pin to the exact commit or the version.
+      # uses: cclauss/Find-Python-syntax-errors-action@90f67be9fb626b675a3971b1d08ab29851cb721f
+      uses: cclauss/Find-Python-syntax-errors-action@v0.2.0
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
